--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
-    "vue-cli-plugin-vuetify": "~2.5.1"
+    "unplugin-auto-import": "^0.8.7",
+    "unplugin-vue-components": "^0.19.6"
   }
 }
