--- a/package.json
+++ b/package.json
@@ -12,21 +12,31 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.5",
     "vue": "^3.2.13",
+    "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-eslint": "^5.0.6",
     "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.6",
     "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
+    "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.8.7",
     "unplugin-vue-components": "^0.19.6"
   },
@@ -36,13 +46,16 @@
       "node": true
     },
     "extends": [
+      "plugin:vue/vue3-essential/recommended",
+      "eslint:recommended",
+      "@vue/typescript/recommended",
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "@vue/standard"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@typescript-eslint/parser",
+      "ecmaVersion": 2020
     },
     "rules": {}
   }
-
 }
